# simple-consensus

./: Cargo.toml  README.md
src/: main.rs
src/cli/: commands.rs  config.rs  mod.rs
src/consensus/: engine.rs  message.rs  mod.rs  network.rs
